--- a/index.html
+++ b/index.html
@@ -15,16 +15,22 @@
 <body>
     <main>
         <div class="container ">
-            <h1>Todo list</h1>
+            <h1 class="text-center">Todo list</h1>
             <form>
                 <input type="text" class="todo-input" placeholder="Add your task">
                 <button class="todo-btn" type="submit">
                  <i class="fas fa-plus-square"></i>
                 </button>
+                <div class="select-items">
+                    <select class="filter-items" name='todos'>
+                        <option value="all">All</option>
+                        <option value="completed">Completed</option>
+                        <option value="uncompleted">unompleted</option>
+                    </select>
+                </div>
             </form>
             <div class="todo-container">
                 <ul class="todo-list">
-
                 </ul>
             </div>
         </div>
