--- a/index.html
+++ b/index.html
@@ -6,35 +6,33 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="description" content="Organize your daily tasks with todo list">
     <meta name="keywords" content="todo list, todo, baher-essam, Baher Essam, baher-essam.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Todo list</title>
 </head>
 <body>
     <main>
-        <div class="container ">
-            <h1 class="text-center">Todo list</h1>
-            <form>
-                <input type="text" class="todo-input" placeholder="Add your task">
-                <button class="todo-btn" type="submit">
-                 <i class="fas fa-plus-square"></i>
-                </button>
-                <div class="select-items">
-                    <select class="filter-items" name='todos'>
-                        <option value="all">All</option>
-                        <option value="completed">Completed</option>
-                        <option value="uncompleted">unompleted</option>
-                    </select>
+        <div class="container">
+            <div class="header">
+                <div class="clear">
+                    <i class="fa fa-refresh"></i>
                 </div>
-            </form>
-            <div class="todo-container">
-                <ul class="todo-list">
-                </ul>
+                <div id="date"></div>
+            </div>
+            <div class="content">
+                <ul id="list"></ul>
+            </div>
+            <div class="add-to-do">
+                <i class="fa fa-plus-circle"></i>
+                <input type="text" id="input" placeholder="Add a to-do">
             </div>
         </div>
     </main>
+    <footer>
+      <p>BY <a href="https://baher-essam.com">Baher Essam</a></p>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" wfd-invisible="true"></script>
     <script src="app.js"></script>
 </body>
 </html>
