--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <title>Todo list</title>
 </head>
 <body>
+    <div id="lightModeToggle">
+        <div class="lightModeRotate">
+            <div class="moon">
+                <img src="img/moon.svg" class="img-fluid" alt="moon">
+            </div>
+            <div class="sun">
+                <img src="img/sun.svg" class="img-fluid" alt="sun">
+            </div>
+        </div>
+    </div>
     <main>
         <div class="container">
             <div class="header">
